<resources>
    <string name="app_name">Carehub</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">pKtpH1y4vmrmE8iHOokBqhLXfDFUQczY2givoE76</string>
    <string name="back4app_client_key">ZFlBsClpYocD9uCI0bzz8tVPCGVALDEKqDX1KAjV</string>
    <string name="password">Password</string>
    <string name="you_haven_t_an_account_yet">You haven\'t an account yet?</string>
    <string name="login">Login</string>
    <string name="email_username">Email/UserName</string>
    <string name="good_afternoon">Good Afternoon,</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="check_in">Check in</string>
    <string name="today_is">Today is . . .</string>
    <string name="saturday_19_dec_2020">Saturday, 19 Dec 2020</string>
    <string name="quote_of_the_day">Quote of the Day</string>
    <string name="nothing_is_impossible_the_word_itself_says_i_m_possible">Nothing is Impossible, the word itself says I m possible!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>