<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/launcher_login_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/llayout_loginpage_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82">


        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edNameMargin_btm"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/email_username"
            android:inputType="textEmailAddress"
            android:padding="@dimen/eduser_name_padding" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/edpasswordMargin_btm"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/edPassword_padding"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="109dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/login_btn"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginBottom="@dimen/btn_margin_btm"
            android:background="@drawable/registration_button_background"
            android:onClick="login"
            android:text="@string/login"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:onClick="signup"
            android:text="@string/you_haven_t_an_account_yet" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


















































